# mtg-meta-mage

./: .env_example  .gitignore  DAYBREAK_API_EXPLORATION.md  README.md  pyproject.toml
.cursor/: mcp.json
openspec/: AGENTS.md  project.md
openspec/changes/add-archetype-classification/: design.md  proposal.md  tasks.md
openspec/changes/add-card-data-tables/: design.md  proposal.md  tasks.md
openspec/changes/add-deck-optimization-tools/: proposal.md  tasks.md
openspec/changes/add-frontend-ui/: proposal.md  tasks.md
openspec/changes/add-langgraph-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-matchup-coaching/: design.md  proposal.md  tasks.md
openspec/changes/add-meta-analytics-dashboard/: tasks.md
src/: core_utils.py
src/clients/: __init__.py  llm_client.py  scryfall_client.py  topdeck_client.py
src/data/: etl_pipeline.py  filters.py  load_tournaments.py
src/database/: __init__.py  connection.py  init_db.py  schema.sql
src/etl/: __init__.py  archetype_pipeline.py  base_pipeline.py  cards_pipeline.py  etl_pipeline.py  etl_utils.py  main.py  tournaments_pipeline.py  utils.py
src/services/: __init__.py  scryfall_client.py  topdeck_client.py
tests/: conftest.py
tests/integration/: conftest.py  test_database_integration.py  test_decklist_processing.py  test_e2e_agent_api.py  test_e2e_archetype_classification.py  test_e2e_cards.py  test_e2e_mcp_server.py  test_e2e_meta_analytics.py  test_e2e_tournaments.py  test_mcp_workflows.py  test_schema_creation.py  test_scryfall_integration.py  test_topdeck_integration.py
tests/unit/: conftest.py  test_agent_graph.py  test_agent_llm_interpretation.py  test_agent_routes.py  test_agent_store.py  test_agent_streaming.py  test_archetype_pipeline.py  test_cards_pipeline.py  test_cards_table_schema.py  test_core_utils.py  test_database_connection.py  test_deck_cards_table_schema.py  test_deck_coaching_tools.py  test_etl_pipeline.py  test_etl_pipeline_core.py  test_etl_pipeline_filters.py  test_etl_pipeline_helpers.py  test_etl_pipeline_scryfall.py  test_etl_pipeline_topdeck.py  test_etl_utils.py  test_filters.py  test_llm_client.py  test_meta_research_tools.py  test_meta_routes.py  test_meta_service.py  test_scryfall_client.py  test_topdeck_client.py  test_tournaments_pipeline.py
(+69 files in other folders)
