[project]
name = "mtg-meta-mage"
version = "0.1.0"
description = "AI-powered tool for analyzing Magic: The Gathering decklists against the competitive meta"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "python-Levenshtein>=0.25.0",
    "strands-agents>=1.17.0",
    "levenshtein>=0.27.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]

