[project]
name = "mtg-meta-mage"
version = "0.1.0"
description = "AI-powered tool for analyzing Magic: The Gathering decks against the competitive meta"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "python-Levenshtein>=0.25.0",
    "levenshtein>=0.27.3",
    "langgraph>=0.2.0",
    "langchain-core>=1.0.6",
    "langchain-openai>=1.0.3",
    "langchain-anthropic>=1.1.0",
    "langchain-aws>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "polars>=1.13.0",
    "fastmcp>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "sse-starlette>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"

